# ccstatusline

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
src/: main.rs
src/core/: mod.rs  statusline.rs
src/core/segments/: context_window.rs  directory.rs  extra.rs  git.rs  mod.rs  model.rs
src/core/segments/provider/: minimax.rs  mod.rs
src/model/: minimax.rs  mod.rs  types.rs
src/utils/: loader.rs  mod.rs  shader.rs
