[package]
name = "ccstatusline"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ansi_term = "0.12.1"
async-trait = "0.1.89"
futures = "0.3.32"
dirs = "6.0.0"
lazy_static = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
